[gd_scene load_steps=4 format=3 uid="uid://crm66hgtkibqh"]

[ext_resource type="Script" path="res://examples/input_settings/input_settings.gd" id="1_a55hf"]
[ext_resource type="Script" path="res://addons/cog/classes/key_bind_button/key_bind_button.gd" id="1_ml86u"]
[ext_resource type="Resource" uid="uid://ckwhke0fgq340" path="res://examples/input_settings/example_key_set.tres" id="3_1v6rf"]

[node name="InputSettings" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_a55hf")
key_label_set = ExtResource("3_1v6rf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Primary"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Secondary"
horizontal_alignment = 1

[node name="Move Up" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Move Up"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Up"

[node name="KeyBindButton" type="Button" parent="VBoxContainer/Move Up"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_up"
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="KeyBindButton2" type="Button" parent="VBoxContainer/Move Up"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_up"
index = 1
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="Move Left" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Move Left"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Left"

[node name="KeyBindButton" type="Button" parent="VBoxContainer/Move Left"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_left"
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="KeyBindButton2" type="Button" parent="VBoxContainer/Move Left"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_left"
index = 1
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="Move Down" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Move Down"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Down"

[node name="KeyBindButton" type="Button" parent="VBoxContainer/Move Down"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_down"
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="KeyBindButton2" type="Button" parent="VBoxContainer/Move Down"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_down"
index = 1
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="Move Right" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Move Right"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Right"

[node name="KeyBindButton" type="Button" parent="VBoxContainer/Move Right"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_right"
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="KeyBindButton2" type="Button" parent="VBoxContainer/Move Right"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "move_right"
index = 1
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="Jump" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Jump"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump"

[node name="KeyBindButton" type="Button" parent="VBoxContainer/Jump"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "jump"
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="KeyBindButton2" type="Button" parent="VBoxContainer/Jump"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
script = ExtResource("1_ml86u")
action = "jump"
index = 1
editing_text = "..."
cancel_action = "ui_cancel"
delete_action = "ui_text_backspace"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Reset" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "Reset"

[node name="Save" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 8
text = "Save"

[connection signal="pressed" from="VBoxContainer/Buttons/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Save" to="." method="_on_save_pressed"]
